fix: :hammer: config general logic and assertion remove products feature